...
    // Drawing code
    self.arrayPickerPosition = [NSArray arrayWithObjects:@"1", @"2", @"3", @"4", @"5", @"6", @"7", @"8", @"9", @"10", nil];
    
    [self.pickerView reloadAllComponents];
    [self.pickerView setBackgroundColor:[UIColor blackColor]];
    
    [self.okButton setTitle:NSLocalizedString(@"OK", nil) forState:UIControlStateNormal];
    [self.cancelButton setTitle:NSLocalizedString(@"Cancel", nil) forState:UIControlStateNormal];
}



#pragma mark - UIPickerViewDataSource
...
